--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,11 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: 黄表纸的博客 # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: 我是黄表纸，这是我的博客 # it will display as the subtitle
 
-description: >- # used by seo meta and the atom feed
+description: 生活不易,欢迎打赏,编程菜鸟，学习炒股# used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
 
 # Fill in the protocol & hostname for your site.
