--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: 黄表纸的博客 # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: 个人随笔纯原创，喜欢就关注我吧 # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
